--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,6 +2,10 @@
 requires = ["maturin>=1.10.2,<2.0"]
 build-backend = "maturin"
 
+[tool.maturin]
+module-name = "rustkit_learning._backend"
+manifest-path = "_backend/Cargo.toml"
+
 [project]
 name = "rustkit_learning"
 version = "0.1.0"
@@ -11,11 +15,12 @@ requires-python = ">=3.14"
 dependencies = [
     "bokeh>=3.8.1",
     "numpy>=2.3.5",
+    "ruff>=0.14.7",
 ]
 
 [tool.uv]
 cache-keys = [
   { file = "pyproject.toml" },
-  { file = "Cargo.toml" },
-  { file = "**.rs" }
+  { file = "_backend/Cargo.toml" },
+  { file = "_backend/**.rs" }
 ]
