--- a/_backend/Cargo.toml
+++ b/_backend/Cargo.toml
@@ -8,4 +8,7 @@ crate-type = ["cdylib"]
 
 [dependencies]
 ndarray = "0.17.1"
-pyo3 = { version = "0.27.1", features = ["extension-module"] }
+pyo3 = { version = "0.27.1", features = ["extension-module"]}
+
+[dev-dependencies]
+pyo3-stub-gen = "0.17.2"
